fix port searching method in wrapper side, change build location

--- a/LibreHardwareMonitorWrapper/LibreHardwareMonitorWrapper.csproj
+++ b/LibreHardwareMonitorWrapper/LibreHardwareMonitorWrapper.csproj
@@ -29,4 +29,8 @@
         <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="build\" />
+    </ItemGroup>
+
 </Project>
